# connect-go-googleapis

./: BUILD.bazel  MODULE.bazel  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
proto/greet/v1/: BUILD.bazel  greet.proto
proto/greet/v1/greetv1connect/: BUILD.bazel
