load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "greetv1_proto",
    srcs = ["greet.proto"],
    visibility = ["//visibility:public"],
    deps = [
        # Well known protos should be included as deps in the
        # proto_library rules of the source files importing them.
        # A list of all @com_google_protobuf well known protos can
        # seen with:
        # `bazel query 'kind(proto_library, @com_google_protobuf//:all)'`
        # @com_google_protobuf//:any_proto
        # @com_google_protobuf//:api_proto
        # @com_google_protobuf//:cc_wkt_protos_genproto
        # @com_google_protobuf//:compiler_plugin_proto
        # @com_google_protobuf//:descriptor_proto
        # @com_google_protobuf//:duration_proto
        # @com_google_protobuf//:empty_proto
        # @com_google_protobuf//:field_mask_proto
        # @com_google_protobuf//:generated_protos_proto
        # @com_google_protobuf//:generic_test_protos
        # @com_google_protobuf//:kt_proto3_unittest
        # @com_google_protobuf//:kt_unittest
        # @com_google_protobuf//:kt_unittest_lite
        # @com_google_protobuf//:source_context_proto
        # @com_google_protobuf//:struct_proto
        # @com_google_protobuf//:test_messages_proto2_java_proto
        # @com_google_protobuf//:test_messages_proto2_java_proto_lite
        # @com_google_protobuf//:test_messages_proto2_proto
        # @com_google_protobuf//:test_messages_proto3_java_proto
        # @com_google_protobuf//:test_messages_proto3_java_proto_lite
        # @com_google_protobuf//:test_messages_proto3_proto
        "@com_google_protobuf//:timestamp_proto",
        # @com_google_protobuf//:type_proto
        # @com_google_protobuf//:wrappers_proto
    ],
)

buf_lint_test(
    name = "greet_proto_lint",
    # Using the ‘config’ key in buf_lint_test is unnecessary if you want to use Buf’s default values.
    config = "//:buf.yaml",
    targets = [":greetv1_proto"],
    visibility = ["//visibility:public"],
)

# Generate the greet.pb.go file.
go_proto_library(
    name = "greetv1_go_proto",
    importpath = "github.com/abitofhelp/connect-go-googleapis/gen/greet/v1",
    proto = ":greetv1_proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":greetv1_go_proto",
    visibility = ["//visibility:public"],
)
